(PC-2209): fixed CSS for MyBookings view & SearchResults view to handle when title is too long

--- a/src/styles/global/_ellipsis.scss
+++ b/src/styles/global/_ellipsis.scss
@@ -1,11 +1,5 @@
 @mixin multiLineEllipsis() {
-  display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-
-  /* autoprefixer: off */
-  -webkit-box-orient: vertical;
-
-  /* autoprefixer: on */
+  white-space: nowrap;
 }
